# Starcounter-Converter

./: 0.bat  CMakeLists.txt  Converter.cpp  ListContainer.cpp  ListContainer.h  ListEmulator.cpp  ListEmulator.h  README.md
